--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
   "devDependencies": {
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.4",
+    "babel-plugin-import": "^1.13.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-1": "^6.24.1",
-    "css-loader": "^0.28.11",
+    "css-loader": "^3.4.2",
     "file-loader": "^1.1.11",
     "image-webpack-loader": "^4.3.1",
     "style-loader": "^0.21.0",
@@ -22,6 +23,7 @@
     "webpack-cli": "^3.0.8"
   },
   "dependencies": {
+    "antd": "^3.26.9",
     "bootstrap": "^4.1.1",
     "jquery": "^3.3.1",
     "popper.js": "^1.14.3",
